Rename Reference modules

--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -382,19 +382,19 @@
     <Compile Include="Projections\ViewModels\SortCriteriaAddViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\Commands\FeatureCommands.cs" />
-    <Compile Include="Reference\Drivers\ReferenceFieldDriver.cs" />
-    <Compile Include="Reference\Fields\ReferenceField.cs" />
-    <Compile Include="Reference\Handlers\ReferenceHandler.cs" />
-    <Compile Include="Reference\Models\ManyToManyRelationshipModel.cs" />
-    <Compile Include="Reference\Models\OneToManyRelationshipModel.cs" />
-    <Compile Include="Reference\Models\ReferenceFieldViewModel.cs" />
-    <Compile Include="Reference\Models\ReferenceUpdateModel.cs" />
-    <Compile Include="Reference\Models\RelationshipModel.cs" />
-    <Compile Include="Reference\Records\ManyToManyRelationshipRecord.cs" />
-    <Compile Include="Reference\Records\OneToManyRelationshipRecord.cs" />
-    <Compile Include="Reference\Records\RelationshipRecord.cs" />
-    <Compile Include="Reference\Settings\ReferenceFieldSettings.cs" />
-    <Compile Include="Reference\ViewModels\EditRelationshipViewModel.cs" />
+    <Compile Include="Relationships\Drivers\ReferenceFieldDriver.cs" />
+    <Compile Include="Relationships\Fields\ReferenceField.cs" />
+    <Compile Include="Relationships\Handlers\ReferenceHandler.cs" />
+    <Compile Include="Relationships\Models\ManyToManyRelationshipModel.cs" />
+    <Compile Include="Relationships\Models\OneToManyRelationshipModel.cs" />
+    <Compile Include="Relationships\Models\ReferenceFieldViewModel.cs" />
+    <Compile Include="Relationships\Models\ReferenceUpdateModel.cs" />
+    <Compile Include="Relationships\Models\RelationshipModel.cs" />
+    <Compile Include="Relationships\Records\ManyToManyRelationshipRecord.cs" />
+    <Compile Include="Relationships\Records\OneToManyRelationshipRecord.cs" />
+    <Compile Include="Relationships\Records\RelationshipRecord.cs" />
+    <Compile Include="Relationships\Settings\ReferenceFieldSettings.cs" />
+    <Compile Include="Relationships\ViewModels\EditRelationshipViewModel.cs" />
     <Compile Include="Settings\Descriptor\Records\ShellDescriptorRecord.cs" />
     <Compile Include="Settings\Descriptor\Records\ShellFeatureRecord.cs" />
     <Compile Include="Settings\Descriptor\Records\ShellParameterRecord.cs" />
@@ -844,7 +844,7 @@
     <Content Include="Projections\Styles\images\menu.projection.png" />
     <Content Include="Projections\Styles\images\menu.queries.png" />
     <Content Include="Projections\Styles\menu.projector-admin.css" />
-    <Content Include="Reference\Module.txt" />
+    <Content Include="Relationships\Module.txt" />
     <Content Include="Settings\Module.txt" />
     <Content Include="Settings\Placement.info" />
   </ItemGroup>
@@ -1191,22 +1191,22 @@
     <Content Include="Projections\Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Reference\Views\DefinitionTemplates\ReferenceFieldEntityRecord.cshtml" />
+    <Content Include="Relationships\Views\DefinitionTemplates\ReferenceFieldEntityRecord.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Reference\Views\DefinitionTemplates\ReferenceFieldSettings.cshtml" />
+    <Content Include="Relationships\Views\DefinitionTemplates\ReferenceFieldSettings.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Reference\Views\DisplayTemplates\Reference.cshtml" />
+    <Content Include="Relationships\Views\DisplayTemplates\Reference.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Reference\Views\EditorTemplates\Fields\Reference.Edit.cshtml" />
+    <Content Include="Relationships\Views\EditorTemplates\Fields\Reference.Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Reference\Views\EditorTemplates\Parts\Relationship.Edit.cshtml" />
+    <Content Include="Relationships\Views\EditorTemplates\Parts\Relationship.Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Reference\Views\Fields\Reference.cshtml" />
+    <Content Include="Relationships\Views\Fields\Reference.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
