--- a/src/Coevery.Web/Modules/Sample.Lead/Sample.Lead.csproj
+++ b/src/Coevery.Web/Modules/Sample.Lead/Sample.Lead.csproj
@@ -66,6 +66,10 @@
     <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\lib\aspnetwebapi\System.Web.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Mvc, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\lib\aspnetmvc\System.Web.Mvc.dll</HintPath>
@@ -140,6 +144,7 @@
     <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\LeadApiController.cs" />
     <Compile Include="Controllers\LeadController.cs" />
     <Compile Include="Drivers\LeadPartDriver.cs" />
     <Compile Include="Models\LeadPart.cs" />
